--- a/b.html
+++ b/b.html
@@ -1,1 +1,1 @@
-<h1>I am the B File and I'm changed again(like a chamelion)</h1>
+<h1>I am the B File and I'm changed again(like a DaNG chamelion)</h1>
